--- a/frontend/src/pages/Home/Seller/homeseller.css
+++ b/frontend/src/pages/Home/Seller/homeseller.css
@@ -1,3 +1,8 @@
+.home{
+  width: auto;
+  height: auto;
+}
+
 
 .box-page img{
   width: 1000px;
@@ -69,4 +74,3 @@
   transition: 0.3s ease-in;
   cursor: pointer;
 }
-
