--- a/frontend/src/component/navbarMember.css
+++ b/frontend/src/component/navbarMember.css
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 
-
-
-.navbar {
+.navbarmember {
   width: 98%;
   height: 150px;
   background-color: rgb(255, 255, 255);
@@ -14,27 +12,27 @@
 }
 
 
-.navbarmem .right-section {
+.navbarmember .right-section {
   display: flex;
   align-items: center;
 }
 
 
-.navbarmem .right-section .links .button {
+.navbarmember .right-section .links .button {
   display: flex;
   align-items: center;
 
 }
 
 
-.links {
+.linksmember {
   display: flex;
   align-items: center;
   margin-left: 20px; 
 }
 
 
-.links a {
+.linksmember a {
   text-decoration: none;
   color: white;
   margin-left: 20px;
@@ -63,7 +61,7 @@
   color: #aaa; 
 }
 
-.button-createproduct {
+.button-createproductmember {
   font-size: 16px;
   background-color: rgb(255, 255, 255);
   border-radius: 25px;
@@ -79,26 +77,26 @@
 }
 
 
-.button-createproduct:hover{
+.button-createproductmember:hover{
     background-color: rgb(47, 42, 42);
     color: rgb(255, 255, 255);
 }
 
 
-.box-navbar {
+.box-navbarmember {
   margin: center;
   display: flex;
   align-items: center;
   gap: 30px; 
 }
-.box-navbar :hover{
+.box-navbarmember :hover{
   border-radius: 3px;
   mix-blend-mode:multiply;
   filter:drop-shadow(0px 0px 12px rgb(246, 94, 6));
   opacity: 3.5;
 }
 
-.box-navbar img {
+.box-navbarmember img {
   height: 35px; 
 
 }
