--- a/frontend/src/component/navbarSeller.css
+++ b/frontend/src/component/navbarSeller.css
@@ -2,7 +2,7 @@
 
 
 
-.navbar {
+.navbarseller {
   width: 98%;
   height: 150px;
   background-color: rgb(255, 255, 255);
@@ -14,27 +14,27 @@
 }
 
 
-.navbarmem .right-section {
+.navbarseller .right-section {
   display: flex;
   align-items: center;
 }
 
 
-.navbarmem .right-section .links .button {
+.navbarseller .right-section .links .button {
   display: flex;
   align-items: center;
 
 }
 
 
-.links {
+.linksseller {
   display: flex;
   align-items: center;
   margin-left: 20px; 
 }
 
 
-.links a {
+.linksseller a {
   text-decoration: none;
   color: white;
   margin-left: 20px;
@@ -63,7 +63,7 @@
   color: #aaa; 
 }
 
-.button-createproduct {
+.button-createproductseller {
   font-size: 16px;
   background-color: rgb(255, 255, 255);
   border-radius: 25px;
@@ -79,43 +79,43 @@
 }
 
 
-.button-createproduct:hover{
+.button-createproductseller:hover{
     background-color: rgb(47, 42, 42);
     color: rgb(255, 255, 255);
 }
 
 
-.box-navbar {
+.box-navbarseller {
   margin: center;
   display: flex;
   align-items: center;
   gap: 30px; 
 }
-.box-navbar :hover{
+.box-navbarseller :hover{
   border-radius: 3px;
   mix-blend-mode:multiply;
   filter:drop-shadow(0px 0px 12px rgb(246, 94, 6));
   opacity: 3.5;
 }
 
-.box-navbar img {
+.box-navbarseller img {
   height: 35px; 
 
 }
 
-.imgbox {
+.imgboxseller {
   display: flex;
   margin-left: 60px;
   gap: 35px;
 }
-.imgbox :hover{
+.imgboxseller :hover{
   border-radius: 3px;
   mix-blend-mode:multiply;
   filter:drop-shadow(0px 0px 12px rgb(246, 94, 6));
   opacity: 3.5;
 }
 
-.imgbox img {
+.imgboxseller img {
   height: 35px; 
 
 }
