--- a/frontend/src/pages/Home/Member/homemember.css
+++ b/frontend/src/pages/Home/Member/homemember.css
@@ -1,10 +1,10 @@
-.home{
+.homemember{
   width: auto;
   height: auto;
 }
 
 
-.box-page img{
+.box-pagemember img{
   width: 1000px;
   height: 400px;
   border-radius: 25px;
@@ -12,7 +12,7 @@
   margin-top: 20px;
 }
 
-.box-product{
+.box-productmember{
   display: flex;
   justify-content: center;
   background-color: #EBD96B;
@@ -21,14 +21,14 @@
   margin-top: 20px;
 }
 
-.box-product img{
+.box-productmember img{
   margin-left: 90px;
   margin-top: 15px;
   width: 70px;
   height: 70px;
 }
 
-.Naw-arrivals{
+.Naw-arrivalsmember{
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 26px;
   margin-left: 20px;
