--- a/frontend/src/pages/Home/Seller/homeseller.css
+++ b/frontend/src/pages/Home/Seller/homeseller.css
@@ -1,10 +1,10 @@
-.home{
+.homeseller{
   width: auto;
   height: auto;
 }
 
 
-.box-page img{
+.box-pageseller img{
   width: 1000px;
   height: 400px;
   border-radius: 25px;
@@ -12,7 +12,7 @@
   margin-top: 20px;
 }
 
-.box-product{
+.box-productseller{
   display: flex;
   justify-content: center;
   background-color: #EBD96B;
@@ -21,14 +21,14 @@
   margin-top: 20px;
 }
 
-.box-product img{
+.box-productseller img{
   margin-left: 90px;
   margin-top: 15px;
   width: 70px;
   height: 70px;
 }
 
-.Naw-arrivals{
+.Naw-arrivalsseller{
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 26px;
   margin-left: 20px;
@@ -36,7 +36,7 @@
 
 
 /*ปรับขนาด 3*3 ไม่ต้องยุ่งดีกว่า*/
-.products {
+.productsseller {
   width: 100%;
   height: auto;
   display: grid;
@@ -46,7 +46,7 @@
 
 
 /*ปรับขนาดรูปภาพ*/
-.product img {
+.productseller img {
   width: 250px;
   height: 350px;
   border-radius: 25px;
@@ -54,23 +54,23 @@
 }
 
 /*ปรับให้ตัวอักษรอยู่รงกลาง ไม่ยุ่งดีเเล้ว*/
-.product .description {
+.productseller .descriptionseller {
   text-align: center;
   font-family: 'Inter', sans-serif;
   margin-bottom: 20px;
 }
 
-.product .description .name-pro{
+.productseller .descriptionseller .name-proseller{
   font-size: 18px;
   color: #003459;
 }
 
-.product .description .money-color{
+.productseller .descriptionseller .money-colorseller{
   margin-bottom: 40px;
 }
 
 /*ส่วนเสริม*/
-.product:hover {
+.productseller:hover {
   transition: 0.3s ease-in;
   cursor: pointer;
 }
