--- a/frontend/src/pages/Products/CreateProducts/CreateProducts.css
+++ b/frontend/src/pages/Products/CreateProducts/CreateProducts.css
@@ -1,7 +1,7 @@
-body {
+/* body {
   margin: 0;
   font-family: Arial, sans-serif;
-  /* background: linear-gradient(to bottom, #ff7e5f, #feb47b); */
+  background: linear-gradient(to bottom, #ff7e5f, #feb47b);
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -46,7 +46,7 @@ margin-left: -30px;
 .form-content {
   width: 60%; 
   margin-top: 50px;
-} */
+} 
 
 .image-upload {
   width: 35%; 
@@ -78,7 +78,7 @@ margin-left: -30px;
 label {
   font-size: 14px;
   margin-bottom: 5px;
-} */
+} 
 
 input[type="text"],
 textarea,
@@ -88,7 +88,7 @@ select {
   border-radius: 5px;
   font-size: 14px;
   width: 100%;
-} */
+} 
 
 textarea {
   resize: none;
@@ -151,4 +151,4 @@ margin-bottom: 5px;
 .form-group select {
 width: 100%; 
 padding: 5px;
-} 
+}  */
