--- a/frontend/src/pages/authentication/Member/Profile.css
+++ b/frontend/src/pages/authentication/Member/Profile.css
@@ -3,77 +3,24 @@
   margin-top: 5vh;
 }
   
-
 .back-arrow {
   position: absolute;
-  margin-top: -15vh;
-  left: 94vh;
+  margin-top: -19vh;
+  margin-left: 1vh;
   cursor: pointer;
 }
   
 .images-logo {
-  margin-top: -2vh;
   margin-left: -2vh;
 }
-  
-  // ส่วนเนื้อหาของโปรไฟล์
-  .profile-content {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-  
-    .profile-image-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-left: 40vh;
-      margin-bottom: 50vh;
-  
-      .profile-image {
-        width: 200px;
-        height: 200px;
-        border-radius: 50%;
-        border: 2px solid #ccc;
-        margin-bottom: 10px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-left: -600px;
-      }
-  
-      .edit-button {
-        background-color: #ffa24c;
-        color: #000000;
-        padding: 8px 16px;
-        font-size: 14px;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        display: flex;
-        align-items: center;
-        margin-left: -600px;
-  
-        svg {
-          margin-right: 5px;
-        }
-  
-        &:hover {
-          background-color: #ff8c1a;
-        }
-      }
-    }
-  
-  }
 
-.uploaded-image {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  object-fit: cover;
+.profilepic{
+  margin-bottom: 60vh;
+  margin-left: -13vh;
 }
-
+  
 .groupinfo{
-  margin-left: 15vh;
+  margin-left: 25vh;
   margin-top: -85vh;
 }
 
